<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">
  <item
    android:id="@+id/tab_account_page"
    android:title="@string/account"
    android:icon="@drawable/ic_account"
    app:labelVisibilityMode="labeled"/>
  <item
    android:id="@+id/tab_my_account_book"
    android:title="@string/my_account_book"
    android:icon="@drawable/ic_my_account_book_tab"
    app:labelVisibilityMode="labeled"/>
  <item
    android:id="@+id/tab_materials_module"
    android:title="@string/materials"
    android:icon="@drawable/ic_materials2"
    app:labelVisibilityMode="labeled"/>
  <item
    android:id="@+id/tab_mine"
    android:title="@string/mine"
    android:icon="@drawable/ic_mine_tab"
    app:labelVisibilityMode="labeled"/>
</menu>